5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1758_1185.log
== TEST (2019-05-29 21:45:35) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
		print[i]
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:46:12) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
		print[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:46:30) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
print[i]

-- ERROR:
File "XXXX", line 7
    print[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:46:39) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
	print[i]

-- ERROR:
File "XXXX", line 7
    print[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:46:43) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
	print[i]

-- ERROR:
File "XXXX", line 7
    print[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:46:50) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
		print[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:47:40) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
		print[i]
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:48:11) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:48:34) 
-- CODE:
from numpy import *
gc = array(eval(input("v: ")))
i = 0
n = 0
while(i < size(gc)):
	if(gc[i]>99):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.345918
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
